[package]
name = "hello-world"
version = "0.1.0"
authors = ["X01 <xiely@etc-cn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "1.0.0"
log = "0.4.11"
env_logger = "0.8"

actix = "0.10.0"
actix-codec = "0.3.0"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.5.0"
actix-form-data = "0.5.0"
actix-multipart = "0.3.0"

awc = "2"
futures = "0.3.1"
encoding = "0.2.25"
uchardet = "2.0.4"